<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/login_login_activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:visibility="visible">

            <include
                android:id="@+id/login_header"
                layout="@layout/header_lay"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/login_content_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    android:src="@drawable/logo" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/layer_list"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:paddingBottom="5dp"
                        android:src="@drawable/phone_icon" />

                    <EditText
                        android:id="@+id/login_user_et"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:gravity="center|left"
                        android:hint="请输入手机号"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1"
                        android:textColorHint="@color/shangtongtianx_check_txt" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/layer_list"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="bottom|left"
                        android:paddingBottom="5dp"
                        android:src="@drawable/password_icon" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/login_password_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:background="#00000000"
                            android:drawableLeft="@color/transparent"
                            android:gravity="center|left"
                            android:hint="请输入密码"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:lines="1"
                            android:maxLines="1"
                            android:textColorHint="@color/shangtongtianx_check_txt" />

                        <CheckBox
                            android:id="@+id/login_show_iv"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center|right"
                            android:button="@drawable/checkbox_pw_visible"
                            android:gravity="center|right"
                            android:visibility="visible" />
                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <CheckBox
                        android:id="@+id/login_remember_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:button="@drawable/checkbox"
                        android:checked="true"
                        android:drawablePadding="10dp"
                        android:text="记住密码"
                        android:textColor="@color/shangtongtianx_txt"
                        android:textSize="12sp" />

                    <CheckBox
                        android:id="@+id/login_auto_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:button="@drawable/checkbox"
                        android:checked="true"
                        android:drawablePadding="10dp"
                        android:gravity="center|right"
                        android:text="自动登录"
                        android:textColor="@color/shangtongtianx_txt"
                        android:textSize="12sp" />
                </RelativeLayout>

                <Button
                    android:id="@+id/login_login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/big_btn_backgroud"
                    android:text="登录"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/login_register_tv"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center|left"
                        android:layout_marginBottom="5dp"

                        android:layout_weight="5"
                        android:autoLink="all"
                        android:gravity="center|left"
                        android:text="@string/register"
                        android:textColor="@color/shangtongtianx_txt"
                        android:textSize="16sp"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/login_forget_tv"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center|right"
                        android:layout_marginBottom="5dp"

                        android:layout_weight="5"
                        android:autoLink="all"
                        android:gravity="center|right"
                        android:text="@string/forgot"
                        android:textColor="@color/shangtongtianx_txt"
                        android:textSize="16sp"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/login_login_tv"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="5"
                        android:autoLink="all"
                        android:gravity="center|right"
                        android:text="@string/login"
                        android:textColor="@color/shangtongtianx_txt"
                        android:textSize="16sp"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:visibility="gone"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/gray" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="其他登录方式" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|top">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/weibo" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/weixin" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/qq" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_auto_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash"
        android:visibility="visible" >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:visibility="gone"
            android:src="@drawable/logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_alignParentRight="true"
            android:textSize="20sp"
            android:visibility="gone"
            android:text="10秒"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/update_lay"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center|left">

        <ImageView
            android:id="@+id/update_iv"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/update" />

        <TextView
            android:id="@+id/update_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="当前版本:v1.2"
            android:textColor="@color/shangtongtianx_txt"
            android:textSize="14sp" />
    </LinearLayout>



</RelativeLayout>